Favorite database debug

--- a/LibYourself/Form1.resx
+++ b/LibYourself/Form1.resx
@@ -129,4 +129,19 @@ butonuna tıklayınız. attributeleri add e tıkayarak ekleyiniz.....
 
 5. Search yapma : </value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH4gwaES4VFjJuUwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFgSURBVDhP
+        lZPJSsRAEIYL9OBJL94EfQEF8apv4NmbuOIIprszg4joQRwdXBB38eILiL6apjvzAvGvSs1CYgjzQdNJ
+        deWvrUN9zrNxMn6bXLgmEzpkww32K+xHZH8n1auCw+40HN8pTtbJpvcQuRUBlz5ApAHhF2r6RfUuwJH5
+        Y5Me4GNDa9mYnuTYdFUEWaz1M6PWIUzY1chGLWXiZIWsb0p5JThVTrsYuYj1z+T8BW1lE2pRrL+UFOtw
+        qcWKyCQLalF6Ha/DoZkuiSgKS2pR8hIe9a0aE+7gd1YeqQ3HWHvS7SoiP4fztoyzRCOZQh9eJRPTXVbr
+        gDiZxdkH1inWJ8qY15MhuC6ehIwqfcKzg/O+pB37Nuo/QfQYtm/x+Re+JFInjwsdl4hcs2SHyOFLbqzz
+        m3LlK+E586g4Ky6P4bSNb0FsI3+vE6nC+p2+CO+955HgyAORN9lHRqLzDxg6f72CxSei4TBvAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
 </root>
